@@ -14,7 +14,7 @@ BROWSER = chrome
 # target execution: local or remote
 TARGET = local
 # headless mode only for chrome or firefox and local execution
-HEADLESS = false
+HEADLESS = true
 URL_CRM = https://rise.anhtester.com/signin
 # grid url and port
 REMOTE_URL = localhost
